--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ buildNumber.properties
 .mvn/wrapper/maven-wrapper.jar
 /.idea/
 /src/main/ngapp/node/
+/src/main/resources/META-INF/resources/public/
