--- a/pom.xml
+++ b/pom.xml
@@ -117,6 +117,12 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>it.fmt.games.reversi</groupId>
+            <artifactId>reversi-core</artifactId>
+            <version>1.0.1</version>
+        </dependency>
     </dependencies>
 
     <build>
