--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,12 +3,19 @@ spring.profiles.active=prod
 springdoc.swagger-ui.path=/swagger-ui-custom.html
 springdoc.swagger-ui.operationsSorter=method
 # custom path for api docs
+springdoc.api-docs.enabled=true
 springdoc.api-docs.path=/api-docs
 # H2 Related Configurations
 spring.datasource.url=jdbc:h2:mem:reversi
 ## for com.baeldung.restdocopenapi ##
 springdoc.version=@springdoc.version@
+
+# timeout in seconds
+game.turn.timeout=60
+
 #spring.jpa.hibernate.ddl-auto=none
 logging.level.org.hibernate.SQL=debug
 logging.level.org.hibernate.type.descriptor.sql=trace
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=trace
+
+logging.level.org.abubusoft.reversi.server=debug
