--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ springdoc.swagger-ui.operationsSorter=method
 springdoc.api-docs.enabled=true
 springdoc.api-docs.path=/api-docs
 # H2 Related Configurations
-spring.datasource.url=jdbc:h2:mem:reversi
+spring.datasource.url=jdbc:h2:mem:reversi;DB_CLOSE_ON_EXIT=FALSE
 ## for com.baeldung.restdocopenapi ##
 springdoc.version=@springdoc.version@
 
