--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,20 @@
         <url>https://github.com/xcesco/reversi-backend</url>
     </scm>
 
+    <repositories>
+        <repository>
+            <id>central</id>
+            <url>https://repo1.maven.org/maven2</url>
+            <releases><enabled>true</enabled></releases>
+            <snapshots><enabled>false</enabled></snapshots>
+        </repository>
+        <repository>
+            <id>github</id>
+            <name>GitHub xcesco Apache Maven Packages</name>
+            <url>https://maven.pkg.github.com/xcesco/releases</url>
+        </repository>
+    </repositories>
+
     <developers>
         <developer>
             <id>xcesco</id>
@@ -162,11 +176,10 @@
             <version>1.3.5.RELEASE</version>
         </dependency>
 
-
         <dependency>
             <groupId>it.fmt.games.reversi</groupId>
             <artifactId>reversi-core</artifactId>
-            <version>1.0.1</version>
+            <version>1.1.0</version>
         </dependency>
     </dependencies>
 
