--- a/src/test/resources/application-client.properties
+++ b/src/test/resources/application-client.properties
@@ -11,12 +11,11 @@ spring.datasource.url=jdbc:h2:mem:reversi;DB_CLOSE_ON_EXIT=FALSE
 springdoc.version=@springdoc.version@
 
 # timeout in seconds
-game.turn.timeout=2
+game.turn.timeout=300
 
 #spring.jpa.hibernate.ddl-auto=none
-#logging.level.org.hibernate.SQL=none
-#logging.level.org.hibernate.type.descriptor.sql=info
-#logging.level.org.hibernate.type.descriptor.sql.BasicBinder=info
-
-logging.level.org.abubusoft.reversi.server=error
-logging.level.org.abubusoft.reversi.server.web=info
+#logging.level.org.hibernate.SQL=debug
+#logging.level.org.hibernate.type.descriptor.sql=trace
+#logging.level.org.hibernate.type.descriptor.sql.BasicBinder=trace
+#
+#logging.level.org.abubusoft.reversi.server=debug
