@wip #3 reversi-backend-3 Add more test

--- a/src/test/resources/application-server.properties
+++ b/src/test/resources/application-server.properties
@@ -11,16 +11,16 @@ spring.datasource.url=jdbc:h2:mem:reversi;DB_CLOSE_ON_EXIT=FALSE
 springdoc.version=@springdoc.version@
 
 # timeout in seconds
-game.turn.timeout=3
+game.turn.timeout=300
 
 #spring.jpa.hibernate.ddl-auto=none
-logging.level.org.hibernate.SQL=error
-logging.level.org.hibernate.type.descriptor.sql=error
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=error
-logging.level.org.abubusoft.reversi.server=error
+logging.level.org.hibernate.SQL=debug
+logging.level.org.hibernate.type.descriptor.sql=trace
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=trace
+logging.level.org.abubusoft.reversi.server=debug
 
-logging.level.org.abubusoft.reversi.server.web.UserSubscriptionFrameHandler=debug
-logging.level.org.abubusoft.reversi.server.web.MatchSimulationClientSideTest=debug
+logging.level.org.abubusoft.reversi.server.web.UserSubscriptionFrameHandler=error
+logging.level.org.abubusoft.reversi.server.web.MatchSimulationClientSideTest=error
 
 #
 #logging.level.org.abubusoft.reversi.server=debug
