User status on websocket
@wip /xcesco/reversi-android/#14

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,13 +9,17 @@ springdoc.api-docs.path=/api-docs
 spring.datasource.url=jdbc:h2:mem:reversi;DB_CLOSE_ON_EXIT=FALSE
 ## for com.baeldung.restdocopenapi ##
 springdoc.version=@springdoc.version@
-
 # timeout in seconds
 game.turn.timeout=300
-
 #spring.jpa.hibernate.ddl-auto=none
-logging.level.org.hibernate.SQL=debug
-logging.level.org.hibernate.type.descriptor.sql=trace
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=trace
+#logging.level.org.hibernate.SQL=debug
+#logging.level.org.hibernate.type.descriptor.sql=trace
+#logging.level.org.hibernate.type.descriptor.sql.BasicBinder=trace
 
-logging.level.org.abubusoft.reversi.server=debug
+logging.level.org.hibernate.SQL=error
+logging.level.org.hibernate.type.descriptor.sql=error
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=error
+
+
+logging.level.org.abubusoft.reversi.server=error
+logging.level.org.springframework.web.socket=trace
