--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,13 +12,13 @@ springdoc.version=@springdoc.version@
 # timeout in seconds
 game.turn.timeout=300
 #spring.jpa.hibernate.ddl-auto=none
-logging.level.org.hibernate.SQL=debug
-logging.level.org.hibernate.type.descriptor.sql=trace
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=trace
+#logging.level.org.hibernate.SQL=debug
+#logging.level.org.hibernate.type.descriptor.sql=trace
+#logging.level.org.hibernate.type.descriptor.sql.BasicBinder=trace
 
-#logging.level.org.hibernate.SQL=error
-#logging.level.org.hibernate.type.descriptor.sql=error
-#logging.level.org.hibernate.type.descriptor.sql.BasicBinder=error
+logging.level.org.hibernate.SQL=error
+logging.level.org.hibernate.type.descriptor.sql=error
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=error
 
 
 logging.level.org.abubusoft.reversi.server=error
