Add support for Player vs bot
After 10 second user is waiting, he is matched with a bot to play a match.

@fixes #9 Add Bot Player

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,7 @@ spring.datasource.url=jdbc:h2:mem:reversi;DB_CLOSE_ON_EXIT=FALSE
 springdoc.version=@springdoc.version@
 # timeout in seconds
 game.turn.timeout=300
+game.cpu.time=1
 #spring.jpa.hibernate.ddl-auto=none
 #logging.level.org.hibernate.SQL=debug
 #logging.level.org.hibernate.type.descriptor.sql=trace
