--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,4 +1,12 @@
 spring.devtools.add-properties=true
 
 # timeout in seconds
-game.turn.timeout=300
+game.turn.timeout=3
+
+#logging.level.org.hibernate.SQL=debug
+#logging.level.org.hibernate.type.descriptor.sql=trace
+#logging.level.org.hibernate.type.descriptor.sql.BasicBinder=trace
+
+logging.level.org.hibernate.SQL=error
+logging.level.org.hibernate.type.descriptor.sql=trace
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=trace
