--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.datasource.url=jdbc:h2:mem:reversi;DB_CLOSE_ON_EXIT=FALSE
 ## for com.baeldung.restdocopenapi ##
 springdoc.version=@springdoc.version@
 # timeout in seconds
-game.turn.timeout=300
+game.turn.timeout=60
 game.cpu.time=1
 #spring.jpa.hibernate.ddl-auto=none
 #logging.level.org.hibernate.SQL=debug
@@ -23,4 +23,4 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=error
 
 
 logging.level.org.abubusoft.reversi.server=error
-logging.level.org.springframework.web.socket=trace
+logging.level.org.springframework.web.socket=error
